# slugline-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: claude_desktop.md  dataset.md  demo_walkthrough.md  testing.md
scripts/: verify_local_install.sh  verify_uvx_run.sh
src/slugline_mcp/: __init__.py  __main__.py  config.py  retrieval.py  server.py
src/slugline_mcp/indexing/: bootstrap.py  build_index.py  chroma_client.py  embeddings.py  mood_tagging.py  parser.py  plaintext_scene_splitter.py
src/slugline_mcp/tools/: _formatting.py  find_mood_reference_scenes.py  get_analysis_style.py  get_scene_details.py  list_indexed_movies.py  search_similar_scenes.py
tests/: conftest.py  test_bootstrap.py  test_find_mood_reference_scenes.py  test_get_analysis_style.py  test_get_scene_details.py  test_list_indexed_movies.py  test_parser.py  test_search_similar_scenes.py
tests/fixtures/: sample_script.xml
